log/build_2023-10-12_11-16-57/loki_base/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/loki/Documents/GitHub/saga_repo/install/loki_base/lib/python3.10/site-packages/loki_base/base_driver.py", line 303
    def initPltf(self), can_interface_type, can_interface_name: 
                      ^
SyntaxError: expected ':'

